--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,9 +6,13 @@
     <BODY>
         <H1>States</H1>
         <UL>
-            {% for state in states %}
-                <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-            {% endfor %}
+        {% if states %}
+          {% for state in states %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+          {% endfor %}
+        {% else %}
+            <LI> :<B></B></LI>
+        {% endif %}
         </UL>
     </BODY>
 </HTML>
